# NanoResearch

./: .gitignore  AGENTS.md  CLAUDE.md  DIFFERENCES.md  LICENSE  MERGE_NOTES.md  NanoResearch_Architecture.html  README.md  README_en.md  fix_docstring.py  pyproject.toml  requirements.txt  rerun_figure_gen.py
.claude/commands/: analysis.md  experiment.md  ideation.md  planning.md  research.md  resume.md  review.md  status.md  writing.md
agentic_emergence/: checklist.md  strategy.md
docs/experiments/: lightweight_router_persona_canonical_baselines_v1.json  (+6 more)
mcp_server/: __init__.py  server.py  utils.py
nanoresearch/: __init__.py  __main__.py  _smoke_helpers.py  cli.py  cli_code_edit.py  cli_commands.py  cli_paper_edit.py  config.py  constants.py  exceptions.py  feishu_bot.py  feishu_bot_core.py  feishu_bot_handlers.py  logging_config.py  memory.py  router_policy.py  skill_prompts.py  skill_registry.py  skills.py  smoke_execution.py  tui.py
scripts/: run_router_sdpo_offpolicy.sh  submit_router_sdpo_offpolicy.sh
tests/: test_canonical_baselines.py  test_deep_persona_runner.py  test_evo_pipeline_mode.py  test_execution_auto_repair.py  test_latex_fixes.py  test_memory_relevance.py  test_profile.py  test_router_persona_eval.py
tools/: aggregate_router_persona_results.py  build_balanced_router_persona_manifest.py  build_router_persona_experiment_manifest.py  export_router_sdpo_offpolicy.py  prepare_router_persona_elastic_slurm_batch.py  prepare_router_persona_full_elastic_batch.py  recompute_router_persona_canonical_deltas.py  run_router_persona_deep_experiment.py
(+331 files in other folders)
