[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanoresearch"
version = "0.1.0"
description = "Minimal AI-driven research engine: idea → literature review → experiment plan → paper draft"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.5.0,<3.0.0",
    "openai>=1.14.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "lxml>=5.1.0",
    "Jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.25.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]
math = [
    "sympy>=1.12",
]

[project.scripts]
nanoresearch = "nanoresearch.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
